refactor: update stepper transition handling and API documentation
- Replaced `beforeNext`, `afterNext`, `beforePrev`, and `afterPrev` methods with unified `onBeforeTransition` and `onAfterTransition` hooks for improved transition management.
- Updated documentation to reflect the new transition hooks and their usage, enhancing clarity for developers.
- Refactored related components and types to support the new transition logic, ensuring a more consistent and maintainable API.

--- a/apps/docs/content/docs/react/api-references/define.mdx
+++ b/apps/docs/content/docs/react/api-references/define.mdx
@@ -654,7 +654,7 @@ The context object passed to both callbacks:
 
 <Callout type="info">
   Note: `onBeforeTransition` and `onAfterTransition` are global callbacks defined in `defineStepper`. 
-  For one-time callbacks on specific navigation actions, use `beforeNext()`, `afterNext()`, `beforePrev()`, etc. 
+  For callbacks on every navigation, call `stepper.onBeforeTransition(cb)` and/or `stepper.onAfterTransition(cb)` on the object returned by `useStepper()`. 
   See the [Hook documentation](./hook#beforeafter-functions) for details.
 </Callout>
 
